--- a/hasil-perternakan.html
+++ b/hasil-perternakan.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Hasil Peternakan Desa Bongkot</title>
-    <meta name="description" content="Website Desa Bongkot">
-    <meta name="keywords" content="Desa Bongkot, Web Desa Bongkot, Bongkot, Purwodadi, Purworejo, Hasil Peternakan">
+    <title>Hasil Peternakan Desa Keponggok</title>
+    <meta name="description" content="Website Desa Keponggok">
+    <meta name="keywords" content="Desa Keponggok, Web Desa Keponggok, Keponggok, Purwodadi, Purworejo, Hasil Peternakan">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
@@ -42,7 +42,7 @@
                         <div class="col-xl-3 col-lg-2">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h2>Desa Bongkot</h2>
+                                    <h2>Desa Keponggok</h2>
                                 </a>
                             </div>
                         </div>
@@ -94,9 +94,9 @@
                 </div>
                 <div class="col-xl-7 col-md-7">
                     <div class="company_info">
-                        <h3>Hasil Peternakan Desa Bongkot</h3>
+                        <h3>Hasil Peternakan Desa Keponggok</h3>
                         <p>
-                            Komoditas pertanian yang diproduksi oleh warga Desa Bongkot adalah padi, pisang, sukun,
+                            Komoditas pertanian yang diproduksi oleh warga Desa Keponggok adalah padi, pisang, sukun,
                             kelapa.
                         </p>
 
