--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Beranda - Website Desa Bongkot</title>
-    <meta name="description" content="Website Desa Bongkot">
-    <meta name="keywords" content="Desa Bongkot, Web Desa Bongkot, Bongkot, Purwodadi, Purworejo">
+    <title>Beranda - Website Desa Keponggok</title>
+    <meta name="description" content="Website Desa Keponggok">
+    <meta name="keywords" content="Desa Keponggok, Web Desa Keponggok, Keponggok, Purwodadi, Purworejo">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
@@ -42,7 +42,7 @@
                         <div class="col-xl-3 col-lg-2">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h2>Desa Bongkot</h2>
+                                    <h2>Desa Keponggok</h2>
                                 </a>
                             </div>
                         </div>
@@ -97,14 +97,14 @@
                         <div class="slider_text text-center">
                             <div class="text">
                                 <h3>
-                                    Selamat datang di website desa Bongkot
+                                    Selamat datang di website desa Keponggok
                                 </h3>
                                 <a class="boxed-btn3" href="#">Potensi Desa</a>
                             </div>
                             <div class="ilstrator_thumb">
                                 <div style="border-radius: 42px;">
                                     <iframe
-                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15810.26626874213!2d109.97870727710408!3d-7.835611859664404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7ae7b7d9a75827%3A0x8e26983b430ba0c4!2sBongkot%2C%20Purwodadi%2C%20Purworejo%20Regency%2C%20Central%20Java!5e0!3m2!1sen!2sid!4v1577852039355!5m2!1sen!2sid"
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15810.26626874213!2d109.97870727710408!3d-7.835611859664404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7ae7b7d9a75827%3A0x8e26983b430ba0c4!2sKeponggok%2C%20Purwodadi%2C%20Purworejo%20Regency%2C%20Central%20Java!5e0!3m2!1sen!2sid!4v1577852039355!5m2!1sen!2sid"
                                         width="600" height="450" frameborder="0" style="border:0;"
                                         allowfullscreen=""></iframe>
                                 </div>
@@ -128,7 +128,7 @@
                         </div>
                         <h3>Hasil Pertanian</h3>
                         <p>
-                            Komoditas pertanian yang diproduksi oleh warga Desa Bongkot adalah padi, pisang, sukun,
+                            Komoditas pertanian yang diproduksi oleh warga Desa Keponggok adalah padi, pisang, sukun,
                             kelapa.
                         </p>
                         <a href="hasil-pertanian.html" class="boxed-btn3-text">Selengkapnya</a>
@@ -154,7 +154,7 @@
                         <h3>BUMDes</h3>
                         <p>
                             Saat ini, BUMDes masih dalam tahap persiapan untuk didirikan. BUMDes diharapkan dapat
-                            menjadi pilar ekonomi Desa Bongkot.
+                            menjadi pilar ekonomi Desa Keponggok.
                         </p>
                         <a href="#" class="boxed-btn3-text">Selengkapnya</a>
                     </div>
@@ -175,11 +175,11 @@
                 </div>
                 <div class="col-xl-7 col-md-7">
                     <div class="company_info">
-                        <h3>Tentang Desa Bongkot</h3>
+                        <h3>Tentang Desa Keponggok</h3>
                         <p>
-                            Desa Bongkot adalah sebuah desa yang terletak di Kecamatan Purwodadi Kabupaten Purworejo
-                            Provisi Jawa Tengah. Sebagian besar warga Desa Bongkot bekerja sebagai petani, dan beberapa
-                            sebagai peternak. Desa Bongkot terdiri dari empat (4) Rukun Tetangga (RT) yaitu Bongkot
+                            Desa Keponggok adalah sebuah desa yang terletak di Kecamatan Purwodadi Kabupaten Purworejo
+                            Provisi Jawa Tengah. Sebagian besar warga Desa Keponggok bekerja sebagai petani, dan beberapa
+                            sebagai peternak. Desa Keponggok terdiri dari empat (4) Rukun Tetangga (RT) yaitu Keponggok
                             memiliki 4 dusun yaitu Sawahan, Baon, Kalangan dan Klodran.
                         </p>
 
