--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="index.html">Beranda</a></li>
-                                        <li><a href="#">Potensi <i class="ti-angle-down"></i></a>
+                                        <li><a href="#potensi-desa">Potensi <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
-                                                <li><a href="services.html">Hasil Pertanian</a></li>
-                                                <li><a href="services.html">Hasil Peternakan</a></li>
-                                                <li><a href="services.html"></a></li>
+                                                <li><a href="hasil-pertanian.html">Hasil Pertanian</a></li>
+                                                <li><a href="hasil-perternakan.html">Hasil Peternakan</a></li>
                                             </ul>
                                         </li>
                                         <li>
@@ -99,7 +98,7 @@
                                 <h3>
                                     Selamat datang di website desa Keponggok
                                 </h3>
-                                <a class="boxed-btn3" href="#">Potensi Desa</a>
+                                <a class="boxed-btn3" href="#potensi-desa">Potensi Desa</a>
                             </div>
                             <div class="ilstrator_thumb">
                                 <div style="border-radius: 42px;">
@@ -115,7 +114,7 @@
     <!-- slider_area_end -->
 
     <!-- service_area  -->
-    <div class="service_area">
+    <div class="service_area" id="potensi-desa">
         <div class="container">
             <div class="row">
                 <div class="col-xl-4 col-md-4">
@@ -180,7 +179,7 @@
                             memiliki 4 dusun yaitu Sawahan, Baon, Kalangan dan Klodran.
                         </p>
 
-                        <a href="#" class="boxed-btn3">Visi dan Misi</a>
+                        <a href="#peta-administrasi" class="boxed-btn3">Peta Administrasi</a>
                     </div>
                 </div>
             </div>
@@ -210,78 +209,50 @@
                         <div class="single_study text-center">
                             <div class="thumb">
                                 <a href="#">
-                                    <img src="img/case_study/1.png" alt="">
+                                    <img src="img/galery/1.jpg" alt="">
                                 </a>
-                            </div>
-                            <div class="subheading">
-                                <h4><a href="#">Product Design</a></h4>
-                                <p>UI/UX, Design</p>
                             </div>
                         </div>
                         <div class="single_study text-center">
                             <div class="thumb">
                                 <a href="#">
-                                    <img src="img/case_study/2.png" alt="">
+                                    <img src="img/galery/2.jpg" alt="">
                                 </a>
-                            </div>
-                            <div class="subheading">
-                                <h4><a href="#">Custom Website</a></h4>
-                                <p>UI/UX, Design</p>
                             </div>
                         </div>
                         <div class="single_study text-center">
                             <div class="thumb">
                                 <a href="#">
-                                    <img src="img/case_study/3.png" alt="">
+                                    <img src="img/galery/3.jpg" alt="">
                                 </a>
-                            </div>
-                            <div class="subheading">
-                                <h4><a href="#">Digital Marketing</a></h4>
-                                <p>UI/UX, Design</p>
                             </div>
                         </div>
                         <div class="single_study text-center">
                             <div class="thumb">
                                 <a href="#">
-                                    <img src="img/case_study/1.png" alt="">
+                                    <img src="img/galery/4.jpg" alt="">
                                 </a>
-                            </div>
-                            <div class="subheading">
-                                <h4><a href="#">Product Design</a></h4>
-                                <p>UI/UX, Design</p>
                             </div>
                         </div>
                         <div class="single_study text-center">
                             <div class="thumb">
                                 <a href="#">
-                                    <img src="img/case_study/2.png" alt="">
+                                    <img src="img/galery/5.jpg" alt="">
                                 </a>
-                            </div>
-                            <div class="subheading">
-                                <h4><a href="#">Custom Website</a></h4>
-                                <p>UI/UX, Design</p>
                             </div>
                         </div>
                         <div class="single_study text-center">
                             <div class="thumb">
                                 <a href="#">
-                                    <img src="img/case_study/3.png" alt="">
+                                    <img src="img/galery/6.jpg" alt="">
                                 </a>
-                            </div>
-                            <div class="subheading">
-                                <h4><a href="#">Digital Marketing</a></h4>
-                                <p>UI/UX, Design</p>
                             </div>
                         </div>
                         <div class="single_study text-center">
                             <div class="thumb">
                                 <a href="#">
-                                    <img src="img/case_study/3.png" alt="">
+                                    <img src="img/galery/7.jpg" alt="">
                                 </a>
-                            </div>
-                            <div class="subheading">
-                                <h4><a href="#">Digital Marketing</a></h4>
-                                <p>UI/UX, Design</p>
                             </div>
                         </div>
                     </div>
@@ -292,71 +263,18 @@
     <!--/ case_study_area  -->
 
     <!-- accordion_area  -->
-    <div class="accordion_area">
+    <div class="accordion_area" id="peta-administrasi">
         <div class="container">
             <div class="row align-items-center">
 
                 <div class="col-xl-6 col-lg-6">
                     <div class="faq_ask">
-                        <h3>Visi</h3>
-                        <div id="accordion">
-                            <div class="card">
-                                <div class="card-header" id="headingTwo">
-                                    <h5 class="mb-0">
-                                        <button class="btn btn-link collapsed" data-toggle="collapse"
-                                            data-target="#collapseTwo" aria-expanded="false"
-                                            aria-controls="collapseTwo">
-                                            Adieus who direct esteem <span>It esteems luckily?</span>
-                                        </button>
-                                    </h5>
-                                </div>
-                                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-                                    data-parent="#accordion">
-                                    <div class="card-body">Esteem spirit temper too say adieus who direct esteem esteems
-                                        luckily or picture placing drawing.
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header" id="headingOne">
-                                    <h5 class="mb-0">
-                                        <button class="btn btn-link collapsed" data-toggle="collapse"
-                                            data-target="#collapseOne" aria-expanded="false"
-                                            aria-controls="collapseOne">
-                                            Who direct esteem It esteems?
-                                        </button>
-                                    </h5>
-                                </div>
-                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
-                                    data-parent="#accordion">
-                                    <div class="card-body">Esteem spirit temper too say adieus who direct esteem esteems
-                                        luckily or picture placing drawing.
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header" id="headingThree">
-                                    <h5 class="mb-0">
-                                        <button class="btn btn-link collapsed" data-toggle="collapse"
-                                            data-target="#collapseThree" aria-expanded="false"
-                                            aria-controls="collapseThree">
-                                            Duis consectetur feugiat auctor?
-                                        </button>
-                                    </h5>
-                                </div>
-                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-                                    data-parent="#accordion">
-                                    <div class="card-body">Esteem spirit temper too say adieus who direct esteem esteems
-                                        luckily or picture placing drawing.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <h3>Peta Administrasi</h3>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6">
                     <div class="accordion_thumb">
-                        <img src="img/banner/accordion.png" alt="">
+                        <img src="img/peta-admin.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -364,148 +282,6 @@
 
     </div>
     <!--/ accordion_area  -->
-
-
-    <!-- features_area  -->
-    <div class="features_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="section_title text-center">
-                        <h3>Misi</h3>
-                        <p>
-                            Esteem spirit temper too say adieus who direct esteem. It esteems luckily or <br> picture
-                            placing drawing.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="single_feature">
-                        <div class="icon">
-                            <img src="img/svg_icon/feature_1.svg" alt="">
-                        </div>
-                        <h4>Custom design</h4>
-                        <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="single_feature">
-                        <div class="icon">
-                            <img src="img/svg_icon/feature_2.svg" alt="">
-                        </div>
-                        <h4>Paid Search result</h4>
-                        <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="single_feature">
-                        <div class="icon">
-                            <img src="img/svg_icon/feature_3.svg" alt="">
-                        </div>
-                        <h4>Global Search option</h4>
-                        <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="single_feature">
-                        <div class="icon">
-                            <img src="img/svg_icon/feature_4.svg" alt="">
-                        </div>
-                        <h4>Email Marketing</h4>
-                        <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="single_feature">
-                        <div class="icon">
-                            <img src="img/svg_icon/feature_5.svg" alt="">
-                        </div>
-                        <h4>Custom Software</h4>
-                        <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="single_feature">
-                        <div class="icon">
-                            <img src="img/svg_icon/feature_6.svg" alt="">
-                        </div>
-                        <h4>Setup business goal</h4>
-                        <p>Esteem spirit temper too say adieus who direct esteem.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--/ features_area  -->
-
-    <!-- testimonial_area  -->
-    <div class="testimonial_area ">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="testmonial_active owl-carousel">
-                        <div class="single_carousel">
-                            <div class="single_testmonial text-center">
-                                <div class="quote">
-                                    <img src="img/testmonial/quote.svg" alt="">
-                                </div>
-                                <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br>
-                                    sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec sed neque.
-                                    <br>
-                                    Fusce ac mattis nulla. Morbi eget ornare dui. </p>
-                                <div class="testmonial_author">
-                                    <div class="thumb">
-                                        <img src="img/testmonial/thumb.png" alt="">
-                                    </div>
-                                    <h3>Robert Thomson</h3>
-                                    <span>Business Owner</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_carousel">
-                            <div class="single_testmonial text-center">
-                                <div class="quote">
-                                    <img src="img/testmonial/quote.svg" alt="">
-                                </div>
-                                <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br>
-                                    sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec sed neque.
-                                    <br>
-                                    Fusce ac mattis nulla. Morbi eget ornare dui. </p>
-                                <div class="testmonial_author">
-                                    <div class="thumb">
-                                        <img src="img/testmonial/thumb.png" alt="">
-                                    </div>
-                                    <h3>Robert Thomson</h3>
-                                    <span>Business Owner</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_carousel">
-                            <div class="single_testmonial text-center">
-                                <div class="quote">
-                                    <img src="img/testmonial/quote.svg" alt="">
-                                </div>
-                                <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br>
-                                    sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec sed neque.
-                                    <br>
-                                    Fusce ac mattis nulla. Morbi eget ornare dui. </p>
-                                <div class="testmonial_author">
-                                    <div class="thumb">
-                                        <img src="img/testmonial/thumb.png" alt="">
-                                    </div>
-                                    <h3>Robert Thomson</h3>
-                                    <span>Business Owner</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /testimonial_area  -->
 
     <footer class="footer">
         <div class=" container">
