--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
                     <div class="company_info">
                         <h3>Tentang Desa Keponggok</h3>
                         <p>
-                            Desa Keponggok adalah sebuah desa yang terletak di Kecamatan Purwodadi Kabupaten Purworejo
-                            Provisi Jawa Tengah. Sebagian besar warga Desa Keponggok bekerja sebagai petani, dan beberapa
-                            sebagai peternak. Desa Keponggok terdiri dari empat (4) Rukun Tetangga (RT) yaitu Keponggok
-                            memiliki 4 dusun yaitu Sawahan, Baon, Kalangan dan Klodran.
+                            Desa Keponggok adalah desa yang terletak di kecamatan Purwodadi kabupaten Purworejo, Jawa Tengah. 
+                            Dengan luas wilayah +- 121 Ha , dengan persentase 85% lahan pertanian, dan 15% pemukiman. 
+                            Desa Keponggok sendiri hanya memiliki 1 dusun yaitu keponggok, terdiri dari 3 RT.
+                            Mayoritas mata pencaharian Desa Keponggok adalah Petani dan beberapa Peternak.
                         </p>
 
                         <a href="#peta-administrasi" class="boxed-btn3">Peta Administrasi</a>
