--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
                         </div>
                         <h3>Hasil Pertanian</h3>
                         <p>
-                            Komoditas pertanian yang diproduksi oleh warga Desa Keponggok adalah padi, pisang, sukun,
-                            kelapa.
+                            Komoditas pertanian yang diproduksi oleh warga Desa Keponggok adalah Padi, melon, semangka, jagung, cabai.
                         </p>
                         <a href="hasil-pertanian.html" class="boxed-btn3-text">Selengkapnya</a>
                     </div>
@@ -137,12 +136,12 @@
                         </div>
                         <h3>Hasil Peternakan</h3>
                         <p>
-                            Hewan yang diternakkan antara lain adalah ayam, kambing, burung puyuh, dan sapi.
+                            Hewan yang diternakkan antara lain adalah bebek, sapi, dan kambing.
                         </p>
                         <a href="hasil-perternakan.html" class="boxed-btn3-text">Selengkapnya</a>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-4">
+                <!-- <div class="col-xl-4 col-md-4">
                     <div class="single_service text-center" style="height: 100%;">
                         <div class="icon">
                             <img src="img/style/finance.svg" alt="" style="width: 100%;">
@@ -154,7 +153,7 @@
                         </p>
                         <a href="#" class="boxed-btn3-text">Selengkapnya</a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
