--- a/index.html
+++ b/index.html
@@ -51,17 +51,11 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="index.html">Beranda</a></li>
-                                        <li><a href="#potensi-desa">Potensi <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="hasil-pertanian.html">Hasil Pertanian</a></li>
-                                                <li><a href="hasil-perternakan.html">Hasil Peternakan</a></li>
-                                            </ul>
+                                        <li>
+                                            <a href="#potensi-desa">Potensi</a>        
                                         </li>
                                         <li>
-                                            <a href="#">Blog</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Berita</a>
+                                            <a href="#galery">Galeri</a>        
                                         </li>
                                     </ul>
                                 </nav>
@@ -141,7 +135,7 @@
                         <a href="hasil-perternakan.html" class="boxed-btn3-text">Selengkapnya</a>
                     </div>
                 </div>
-                <!-- <div class="col-xl-4 col-md-4">
+                <div class="col-xl-4 col-md-4">
                     <div class="single_service text-center" style="height: 100%;">
                         <div class="icon">
                             <img src="img/style/finance.svg" alt="" style="width: 100%;">
@@ -153,7 +147,7 @@
                         </p>
                         <a href="#" class="boxed-btn3-text">Selengkapnya</a>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
@@ -187,7 +181,7 @@
     <!--/ compapy_info  -->
 
     <!-- case_study_area  -->
-    <div class="case_study_area case_bg_1">
+    <div class="case_study_area case_bg_1" id="galery">
         <div class="patrn_1 d-none d-lg-block">
             <img src="img/pattern/patrn_1.png" alt="">
         </div>
@@ -283,97 +277,6 @@
     <!--/ accordion_area  -->
 
     <footer class="footer">
-        <div class=" container">
-            <div class="pro_border">
-                <div class="row">
-                    <div class="col-xl-6 col-md-6">
-                        <div class="lets_projects">
-                            <h3>Let’s Start your project, <a href="#">Mail Us</a> </h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-3 col-md-6 col-lg-3">
-                        <div class="footer_widget">
-                            <div class="footer_logo">
-                                <a href="#">
-                                    <img src="img/footer_logo.png" alt="">
-                                </a>
-                            </div>
-                            <p>
-                                Esteem spirit temper too say adieus who direct esteem. It esteems luckily or picture
-                                placing drawing.
-                            </p>
-                            <div class="socail_links">
-                                <ul>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti-facebook"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti-twitter-alt"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-instagram"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-2 col-md-6 col-lg-3">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Services
-                            </h3>
-                            <ul>
-                                <li><a href="#">Marketing &amp; SEO</a></li>
-                                <li><a href="#"> Startup</a></li>
-                                <li><a href="#">Finance solution</a></li>
-                                <li><a href="#">Food</a></li>
-                                <li><a href="#">Travel</a></li>
-                            </ul>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-2 col-md-6 col-lg-2">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Useful Links
-                            </h3>
-                            <ul>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#"> Contact</a></li>
-                                <li><a href="#">Appointment</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 offset-xl-1 col-md-6 col-lg-4">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Subscribe
-                            </h3>
-                            <form action="#" class="newsletter_form">
-                                <input type="text" placeholder="Enter your mail">
-                                <button type="submit">Subscribe</button>
-                            </form>
-                            <p class="newsletter_text">Esteem spirit temper too say adieus who direct esteem esteems
-                                luckily.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="copy-right_text">
             <div class="container">
                 <div class="footer_border"></div>
