remove link potensi

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <p>
                             Komoditas pertanian yang diproduksi oleh warga Desa Keponggok adalah Padi, melon, semangka, jagung, cabai.
                         </p>
-                        <a href="hasil-pertanian.html" class="boxed-btn3-text">Selengkapnya</a>
+                        <!-- <a href="hasil-pertanian.html" class="boxed-btn3-text">Selengkapnya</a> -->
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
@@ -132,7 +132,7 @@
                         <p>
                             Hewan yang diternakkan antara lain adalah bebek, sapi, dan kambing.
                         </p>
-                        <a href="hasil-perternakan.html" class="boxed-btn3-text">Selengkapnya</a>
+                        <!-- <a href="hasil-perternakan.html" class="boxed-btn3-text">Selengkapnya</a> -->
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
@@ -145,7 +145,7 @@
                             Saat ini, BUMDes masih dalam tahap persiapan untuk didirikan. BUMDes diharapkan dapat
                             menjadi pilar ekonomi Desa Keponggok.
                         </p>
-                        <a href="#" class="boxed-btn3-text">Selengkapnya</a>
+                        <!-- <a href="#" class="boxed-btn3-text">Selengkapnya</a> -->
                     </div>
                 </div>
             </div>
